--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -55,7 +55,7 @@ h6 {
 
   // Add top margin to any element that immediately follows a heading.
   + * {
-    margin-top: $stacked-margin-large;
+    margin-top: var(--stacked-margin-large);
   }
 
   // Add top margin to headings that immediately follow paragraphs and lists.
@@ -71,7 +71,7 @@ p,
 ul,
 ol {
   + * {
-    margin-top: $stacked-margin-large;
+    margin-top: var(--stacked-margin-large);
   }
 }
 
