--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -19,7 +19,6 @@
 // load the rest of the helpers and vars here
 @import "./core/vars";
 @import './core/typography';
-@import './core/margin';
 @import './core/colors';
 @import './core/colors/light';
 @import './core/colors/dark';
