--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -27,6 +27,24 @@ body {
   color: var(--colors-text, var(--color-text));
   font-style: normal;
   word-wrap: break-word;
+
+  // Default margin for stacked elements.
+  --spacing-stacked-margin-small: 0.4em;
+
+  // Default margin-top for subsequent elements.
+  --spacing-stacked-margin-large: 0.8em;
+
+  // Default margin for elements that require extra spacing
+  --spacing-stacked-margin-xlarge: calc(var(--spacing-stacked-margin-large) * 2);
+
+  // Default param spacing
+  --spacing-param: #{rem(28px)};
+
+  // Default margin for Code Listing in Declaration
+  --declaration-code-listing-margin: 14px 0;
+
+  // Default padding for Code Blocks
+  --code-block-style-elements-padding: 8px 14px;
 }
 
 body,
@@ -55,7 +73,7 @@ h6 {
 
   // Add top margin to any element that immediately follows a heading.
   + * {
-    margin-top: var(--stacked-margin-large);
+    margin-top: var(--spacing-stacked-margin-large);
   }
 
   // Add top margin to headings that immediately follow paragraphs and lists.
@@ -71,7 +89,7 @@ p,
 ul,
 ol {
   + * {
-    margin-top: var(--stacked-margin-large);
+    margin-top: var(--spacing-stacked-margin-large);
   }
 }
 
