--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -183,6 +183,11 @@ button {
 
 body {
   $min-width: map-deep-get($breakpoint-attributes, ('default', small, 'min-width'), false);
+
+  @include inTargetIde() {
+    $min-width: map-deep-get($breakpoint-attributes, ('default', xsmall, 'min-width'), false);
+  }
+
   height: 100%;
 
   @if $min-width {
