--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -29,6 +29,11 @@ $breakpoint-attributes: (
       min-width: 320px,
       max-width: 735px,
       content-width: 280px,
+    ),
+    xsmall: (
+      min-width: 245px,
+      max-width: 320px,
+      content-width: 215px,
     ),
   ),
   nav: (
@@ -177,7 +182,7 @@ $breakpoint-attributes: (
 
         // Use a fixed percentage width value for the small breakpoint.
         // The percentage is the ratio of the content-width/min-width sizes.
-        @if $breakpoint == small and $min-width {
+        @if ($breakpoint == small or $breakpoint == xsmall) and $min-width {
           $width: percentage($content-width / $min-width);
         }
 
