--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -36,6 +36,7 @@ $topic-link-icon-spacing: 1rem;
 
 // Icons
 $icon-size-default: 16px;
+$tiny-icon-size: $icon-size-default / 2;
 
 // Code Block Style Elements
 $code-listing-with-numbers-padding: 14px 0;
