--- a/src/styles/base/_changes.scss
+++ b/src/styles/base/_changes.scss
@@ -1,7 +1,7 @@
 /**
  * This source file is part of the Swift.org open source project
  *
- * Copyright (c) 2021 Apple Inc. and the Swift project authors
+ * Copyright (c) 2021-2023 Apple Inc. and the Swift project authors
  * Licensed under Apache License v2.0 with Runtime Library Exception
  *
  * See https://swift.org/LICENSE.txt for license information
@@ -19,7 +19,7 @@
   border-radius: $large-border-radius;
   position: relative;
 
-  &.has-multiple-lines, .has-multiple-lines & {
+  &.displays-multiple-lines, .displays-multiple-lines & {
     border-radius: $border-radius;
   }
 
