[rdar://108129110] fix: set a default quote and add jp as overwrite

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -18,6 +18,7 @@ html {
   @include inTargetWeb {
     font: var(--typography-html-font, $body-font-size $font-content);
   }
+  quotes: "“" "”";
 
   @each $lang, $quotes in $localizedQuotes {
     :lang(#{$lang}) {
