--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -85,7 +85,7 @@ $suggest-lang-height: 52px;
 // Localized Quotes
 $localizedQuotes: (
   ja-JP: "「" "」",
-);
+) !default;
 
 // Localized Fonts
-$localizedFonts: ()
+$localizedFonts: () !default;
