[rdar://108129110] feat: Add support for localized font families

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -81,3 +81,11 @@ $on-this-page-aside-width: 192px;
 
 // Suggest Lang
 $suggest-lang-height: 52px;
+
+// Localized Quotes
+$localizedQuotes: (
+  ja-JP: "「" "」",
+) !default;
+
+// Localized Fonts
+$localizedFonts: () !default;
