Revert "[rdar://30234820] fix: AX in tables (#674)"
This reverts commit b2313e922e77a6c42ac1a88db2607f15a095f1a4.

--- a/src/styles/core/typography/_font-styles.scss
+++ b/src/styles/core/typography/_font-styles.scss
@@ -153,7 +153,7 @@ $font-styles: (
   documentation-code-listing-number: (
     large: 12_18_normal_compact_mono,
   ),
-  documentation-caption: (
+  documentation-figcaption: (
     large: 14_21,
   ),
   documentation-declaration-link: (
