[rdar://111006953] fix: in page link description

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -68,7 +68,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+.heading-wrapper {
   color: var(--colors-header-text, var(--color-header-text));
 
   // Add top margin to any element that immediately follows a heading.
