Add syntax colors for diff additions/deletions.

--- a/src/styles/core/_syntax.scss
+++ b/src/styles/core/_syntax.scss
@@ -10,9 +10,15 @@
 
 // Map each color to the list of syntax highlighter tokens that use it
 $syntax-tokens-for-color: (
+  addition: (
+    addition,
+  ),
   comments: (
     comment,
     quote
+  ),
+  deletion: (
+    deletion,
   ),
   keywords: (
     keyword,
