--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -137,7 +137,9 @@ a {
     text-decoration: none;
   }
 
-  &:hover, &:focus, &.underline {
+  // Inline links need to be underline under WCAG 2.2 compliance
+  // More info: https://www.w3.org/WAI/WCAG22/Techniques/failures/F73
+  &:hover, &:focus, &.inline-link {
     text-decoration: underline;
   }
 
