--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -139,7 +139,7 @@ a {
 
   // Inline links need to be underline under WCAG 2.2 compliance
   // More info: https://www.w3.org/WAI/WCAG22/Techniques/failures/F73
-  &:hover, &:focus, &.inline-link {
+  &:hover, &.inline-link {
     @include underline-text;
   }
 
