[rdar://115116961] chore: underline inline links

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -137,8 +137,10 @@ a {
     text-decoration: none;
   }
 
-  &:hover {
-    text-decoration: underline;
+  // Inline links need to be underline under WCAG 2.2 compliance
+  // More info: https://www.w3.org/WAI/WCAG22/Techniques/failures/F73
+  &:hover, &.inline-link {
+    @include underline-text;
   }
 
   &:active {
