--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -66,6 +66,7 @@ $aside-width-left-border: 6px !default;
 $total-columns: 12 !default;
 
 // Navigator
+$nav-card-vertical-spacing: 10px;
 $nav-card-horizontal-spacing: 10px;
 $nav-card-horizontal-spacing-large: $nav-card-horizontal-spacing * 2;
 $nav-card-horizontal-spacing-small: $nav-card-horizontal-spacing * 0.5;
